
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>CE</groupId>
  <artifactId>Telerecours</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
  	<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
	<dependency>
	    <groupId>org.seleniumhq.selenium</groupId>
	    <artifactId>selenium-java</artifactId>
	    <version>4.27.0</version>
	</dependency>
	 <dependency>
	    <groupId>org.seleniumhq.selenium</groupId>
	    <artifactId>selenium-chrome-driver</artifactId>
	    <version>4.27.0</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-api -->
	<dependency>
	    <groupId>org.seleniumhq.selenium</groupId>
	    <artifactId>selenium-api</artifactId>
	    <version>4.27.0</version>
	</dependency> 
	 <dependency>
	    <groupId>org.seleniumhq.selenium</groupId>
	    <artifactId>selenium-firefox-driver</artifactId>
	    <version>4.27.0</version>
	</dependency>
	<dependency>
	    <groupId>org.seleniumhq.selenium</groupId>
	    <artifactId>selenium-server</artifactId>
	    <version>3.141.59</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-remote-driver -->
	<dependency>
	    <groupId>org.seleniumhq.selenium</groupId>
	    <artifactId>selenium-remote-driver</artifactId>
	    <version>4.27.0</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.testng/testng -->
	<dependency>
	    <groupId>org.testng</groupId>
	    <artifactId>testng</artifactId>
	    <version>7.10.2</version>
	    <scope>test</scope>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
	<dependency>
    	<groupId>org.slf4j</groupId>
    	<artifactId>slf4j-simple</artifactId>
    	<version>2.0.16</version>
    	<scope>test</scope>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-jdk14 -->
	<dependency>
	    <groupId>org.slf4j</groupId>
	    <artifactId>slf4j-jdk14</artifactId>
	    <version>2.0.9</version>
	    <scope>test</scope>
	</dependency>
	<!-- https://mvnrepository.com/artifact/junit/junit -->
	<dependency>
	    <groupId>junit</groupId>
	    <artifactId>junit</artifactId>
	    <version>4.13.2</version>
	    <scope>test</scope>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-params -->
	<dependency>
	    <groupId>org.junit.jupiter</groupId>
	    <artifactId>junit-jupiter-params</artifactId>
	    <version>5.9.0-M1</version>
	    <scope>test</scope>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
	<dependency>
	    <groupId>org.junit.jupiter</groupId>
	    <artifactId>junit-jupiter-api</artifactId>
	    <version>5.10.2</version>
	    <scope>test</scope>
	</dependency>
	<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
	<dependency>
	    <groupId>io.github.bonigarcia</groupId>
	    <artifactId>webdrivermanager</artifactId>
	    <version>5.9.2</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/io.github.rafal-laskowski/wait-until -->
	<dependency>
	    <groupId>io.github.rafal-laskowski</groupId>
	    <artifactId>wait-until</artifactId>
	    <version>1.1.0</version>
	</dependency>
		<!-- https://mvnrepository.com/artifact/com.github.houbb/wait -->
	<dependency>
	    <groupId>com.github.houbb</groupId>
	    <artifactId>wait</artifactId>
	    <version>0.0.1</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-support -->
	<dependency>
	    <groupId>org.seleniumhq.selenium</groupId>
	    <artifactId>selenium-support</artifactId>
	    <version>4.27.0</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc8 -->
	<dependency>
	    <groupId>com.oracle.database.jdbc</groupId>
	    <artifactId>ojdbc8</artifactId>
	    <version>21.7.0.0</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc11 -->
	<dependency>
	    <groupId>com.oracle.database.jdbc</groupId>
	    <artifactId>ojdbc11</artifactId>
	    <version>23.3.0.23.09</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
	<dependency>
	    <groupId>com.mysql</groupId>
	    <artifactId>mysql-connector-j</artifactId>
	    <version>8.0.32</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.jgrapht/jgrapht-core -->
	<dependency>
	    <groupId>org.jgrapht</groupId>
	    <artifactId>jgrapht-core</artifactId>
	    <version>1.5.2</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
	<dependency>
	    <groupId>org.apache.pdfbox</groupId>
	    <artifactId>pdfbox</artifactId>
	    <version>3.0.0</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.itextpdf/itextpdf -->
	<dependency>
	    <groupId>com.itextpdf</groupId>
	    <artifactId>itextpdf</artifactId>
	    <version>5.5.13.4</version>
	</dependency>
	<dependency>
	    <groupId>com.itextpdf.tool</groupId>
	    <artifactId>xmlworker</artifactId>
	    <version>5.5.10</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/net.sourceforge.tess4j/tess4j -->
	<dependency>
	    <groupId>net.sourceforge.tess4j</groupId>
	    <artifactId>tess4j</artifactId>
	    <version>5.8.0</version>
	</dependency>
	<dependency>
	    <groupId>com.github.jai-imageio</groupId>
	    <artifactId>jai-imageio-core</artifactId>
	    <version>1.3.1</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.jodconverter/jodconverter-local -->
	<dependency>
	    <groupId>org.jodconverter</groupId>
	    <artifactId>jodconverter-local</artifactId>
	    <version>4.4.7</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.artofsolving/jodconverter -->
	<dependency>
	    <groupId>com.artofsolving</groupId>
	    <artifactId>jodconverter</artifactId>
	    <version>2.2.1</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.jodconverter/jodconverter-core -->
	<dependency>
	    <groupId>org.jodconverter</groupId>
	    <artifactId>jodconverter-core</artifactId>
	    <version>4.4.7</version>
	</dependency>
	<dependency>
	    <groupId>io.cucumber</groupId>
	    <artifactId>cucumber-java</artifactId>
	    <version>7.15.0</version>
	    <scope>test</scope>
	</dependency>
	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit-platform-engine -->
	<dependency>
	    <groupId>io.cucumber</groupId>
	    <artifactId>cucumber-junit-platform-engine</artifactId>
	    <version>7.15.0</version>
	    <scope>test</scope>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
	<dependency>
	    <groupId>org.junit.jupiter</groupId>
	    <artifactId>junit-jupiter-engine</artifactId>
	    <version>5.10.2</version>
	    <scope>test</scope>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.json/json -->
	<dependency>
	    <groupId>org.json</groupId>
	    <artifactId>json</artifactId>
	    <version>20240303</version>
	</dependency>
  </dependencies>
</project>

